src/main/java/com/example/minishop/infrastructure/error/Status.java
package com.example.minishop.infrastructure.error;

public enum Status {
    BAD_REQUEST,
    NOT_FOUND,
    CONFLICT,
    FORBIDDEN,
    INTERNAL_ERROR
}